--- a/examples/test.in
+++ b/examples/test.in
@@ -1,5 +1,5 @@
-import slio.in
+int multiply(num1:int, num2:int) = num1 * num2
 
 func main()
-    println("Da")
+    println("5 * 5 = ", multiply(5, 5))
 end
